--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.nicognaw</groupId>
     <artifactId>UsaHouseSpider</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>UsaHouseSpider</name>
     <description>UsaHouseSpider</description>
     <properties>
